# Compass

./: .gitignore  AUDIT.md  CONTEXT.md  DECISIONS.md  FINAL_SPRINT_MASTER_PROMPT.md  README.md  SPRINT2_MASTER_PROMPT.md  TODO.md  VERIFICATION.md  demo_script.md  docker-compose.yml  edtech-platform-cursor-implementation-guide.md  package-lock.json  package.json  prove_sprint2.py  prove_sprint2.sh  refactor_nodes.py
apps/api/: Dockerfile  main.py  pyproject.toml
apps/api/agent/: artifact_parser.py  auth.py  graph.py  llm.py  memory_retrieval.py  memory_summarizer.py  prompt_utils.py  state.py
apps/api/agent/nodes/: composer.py  context_loader.py  curriculum_wf.py  detailed_wf.py  diagrams_wf.py  flashcards_wf.py  gate_wf.py  lecture_wf.py  memory_writer.py  quiz_wf.py  research_wf.py  resource_wf.py  router.py  was_wf.py  worksheet_wf.py
apps/api/agent/tools/: images.py  search.py
apps/api/data/: checkpoints.db-shm  checkpoints.db-wal
apps/api/db/: schema.sql  seed_production.sql
apps/api/db/migrations/: 002_rls_and_artifact_types.sql  003_public_quiz_read.sql
apps/api/routers/: curriculum.py  export.py  health.py  memory.py  messages.py  quiz.py
apps/api/scripts/: create_dummies.py  ingest_dummy.py  seed_demo.py
apps/api/tests/: test_artifact_parser.py  test_auth.py  test_llm.py  test_prompt_utils.py
apps/api/tests/nodes/: test_context_loader.py  test_detailed_wf.py  test_lecture_wf.py  test_quiz_wf.py  test_research_wf.py  test_was_wf.py  test_worksheet_wf.py
apps/api/tests/routers/: test_curriculum.py  test_memory.py  test_quiz.py
backend/: .env.example  requirements.txt
frontend/: index.html  package-lock.json  (+1 more)
(+72 files in other folders)
