[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-qdrant>=1.1.0",
    "langfuse>=4.14.0",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "qdrant-client>=1.18.0",
    "supabase>=2.31.0",
    "uvicorn>=0.51.0",
]
