[project]
name = "api"
version = "0.1.0"
description = "LearnForge API — FastAPI + LangGraph agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "python-multipart>=0.0.9",

    # LangChain / LangGraph core
    "langchain-core>=1.4.9",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.9",

    # LLM providers & search tools
    "tavily-python>=0.5.0",
    "duckduckgo-search>=6.3.7",
    "arxiv>=2.1.0",

    # Observability
    "langfuse>=4.14.0",

    # Vector DB
    "qdrant-client>=1.18.0",

    # Database
    "supabase>=2.31.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.8.0",

    # Validation
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",

    # Document parsing (curriculum upload)
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",

    # Document export
    "python-pptx>=1.0.0",

    # Flashcard export
    "genanki>=0.13.0",
]
